# learning_cpp

./: README.md
argv-example/: 00_argc-argv.cpp  01_argv-argc-if-for.cpp  02_argv-pass-float.cpp  README.md
class-example/: README.md
class-example/01-onefile/: comppile.sh
class-example/02-multifile/01-CMDLNcompile/: main.cpp  timer.h
class-example/02-multifile/02-makefile/: README.md
class-example/02-multifile/03-cmake/: CMakeLists.txt  README.md
classes-and-objects/: README.md
pass-return-obj/: README.md
pass-return-obj/01_passObjAsArg/: main.cpp
pass-return-obj/02_retObjAsArg/: main.cpp
pointers/: README.md
pointers/01_pointer2class/: README.md
pointers/02_pointer2class/: main-1.cpp  main-2.cpp
pointers/pointer2class/: main.cpp
timer-class-example/01-onefile/: main.cpp
timer-class-example/02-multifile/01-CMDLNcompile/: box.cpp  compile.sh  timer.cpp
type-cast/: 00_type-cast.cpp  01_atol-atoll-atof.cpp  README.md
wrap-c++-for-other_lang/: README.md
wrap-c++-for-other_lang/00_c-fact-func/: Makefile
wrap-c++-for-other_lang/01_cpp-cube-func/: build.sh
wrap-c++-for-other_lang/02_csharp/01_box/: Box.cs  (+5 more)
wrap-c++-for-other_lang/03_class-number-box/: main.cpp  myClass_wrap.cpp  number.cpp  setup.py
wrap-c++-for-python/00-example/: README.md  build.sh  example.c  example.i  test_run.py
wrap-c++-for-python/01-example/: Makefile  README.md  cube.cpp  cube.i  test_run.py
wrap-c++-for-python/03_class-number-box/: README.md  box.h  build.sh  number.i  test-run.py
wrap-c++-for-python/03_class-number-timer/: Makefile  box.cpp  todo
(+28 files in other folders)
